# Easy-Music

./: .env.example  .env.production.example  .gitattributes  .gitignore  AGENTS.md  README.md  README.zh-CN.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260526_0001_create_users.py  20260527_0002_create_tracks_tags_track_tags.py  20260527_0003_create_processing_jobs.py  20260528_0004_create_playback_events.py  (+9 more)
backend/app/: __init__.py  main.py
backend/tests/: test_ai_client.py  test_ai_intent.py  test_ai_json.py  test_ai_provider.py  test_ai_recommend.py  test_ai_search_client.py  test_ai_search_provider.py  test_ai_tag_search.py  test_ai_tag_search_client.py  test_ai_tag_suggestions.py  test_ai_track_organization_api.py  test_ai_track_organization_cache.py  test_auth_api.py  test_duplicate_signals.py  test_duplicates_api.py  test_duplicates_service.py  test_feedback_events_api.py  test_health_api.py  test_imports_batch_history_api.py  test_imports_config.py  test_imports_confirm_api.py  test_imports_path_safety.py  test_imports_scan_api.py  test_library_reports_api.py  test_logging.py  test_media_ffmpeg.py  test_media_storage.py  test_playback_events_api.py  test_playlists_api.py  test_processing_service.py  test_recommendations_api.py  test_recommendations_service.py  test_revived_tracks_api.py  test_tags_api.py  test_tracks_api.py  test_uploads_api.py  test_video_processing.py  test_video_uploads_api.py  test_worker_jobs.py
docs/: PRD.md  (+21 more)
(+270 files in other folders)
